Add basic information and first post

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
-title: Bruce's Profile
-description: A collection of personal projects I have worked on
+title: Bruce Cheung
+description: Bruce is a maker who likes to build things for fun. He is especially interested in chat systems, natural language understanding, and linguistics.
+logo: /assets/img/ProfileCircular.png
