--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-minimal
 title: Bruce Cheung
 description: Bruce is a maker who likes to build things for fun. He is especially interested in chat systems, natural language understanding, and linguistics.
 logo: /assets/img/ProfileCircularSmall.png
+roleone: University of Cambridge 2023 (MPhil)
+roletwo: London School of Economics 2013 (BSc)
